--- a/index.html
+++ b/index.html
@@ -6,9 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet"/>
     <link href="stylesheet.css" rel="stylesheet"/>
+    <script src="external.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div>hi</div>
+    <div class="left-side">
+        <div class="sidebar">
+            <img src="images/background.avif">
+        </div>
+        <div class="logo">
+            <div class="logo-format">
+                <img src="images/odin-lined.png">
+                <div class="logo-text">ODIN</div>
+            </div>
+        </div>
+    </div>
+    <div class="right-side">
+        <div class="paragraph"><p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p> <p>You <em>know</em> you want to.</p></div>
+        <form action="" method="get" class="signup-form">
+            <div class="form-area"><p>Let's do this!</p>
+                <div class="form-top">
+                    <div class="form-row">
+                        <label for="first_name">FIRST NAME</label>
+                        <input type="text" id="first_name" required>
+                    </div>
+                    <div class="form-row">
+                        <label for="last_name">LAST NAME</label>
+                        <input type="text" id="last_name" required>
+                    </div>
+                </div>
+                <div class="form-middle">
+                    <div class="form-row">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" required>
+                    </div>
+                    <div class="form-row">
+                        <label for="phone_number">PHONE NUMBER</label>
+                        <input type="tel" id="phone_number" required>
+                    </div>
+                </div>
+                <div class="form-bottom">
+                    <div class="form-row">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" required onChange="onChange()">
+                    </div>
+                    <div class="form-row">
+                        <label for="confirm_password">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm_password" required onChange="onChange()">
+                    </div>
+                </div>
+            </div>
+            <div class="signup-area">
+                <button>Create Account</button>
+                <div class="account-info">
+                    <div class="account-text">Already have an account?</div>
+                    <div class="login-text">Log in</div>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
